# www.solisakane.com

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT_PROGRESS.md  GUIDE_DEPLOIEMENT_PRODUCTION.md  GUIDE_DEPLOIEMENT_STAGING.md  RAPPORT_ANALYSE_SOLISAKANE.md  README.md  README_DEPLOIEMENT.md  RESUME_FINAL_DEPLOIEMENT.md  backup-production.sh  deploy-check.js  deploy-production.sh  deploy-staging.sh  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  env.production.example  monitor-production.js  run-tests.js  start-app.js  tatus  test-functionalities.js
.github/: ANALYSE_STABILITE_SOLISAKANE.md  BRANCHES_SUMMARY.md  README.md  REPORTS_INDEX.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: verification.yml
nginx/: Dockerfile  nginx.default.conf  nginx.production.conf  nginx.staging.conf
rn_chat/: .env  ANDROID_TESTING_GUIDE.md  README.md  SOLUTION_FINALE.md  SOLUTION_NOTIFEE.md  STATUS_UPDATE.md  TROUBLESHOOTING.md  fix-notifee.ps1  index.js  launch-android.bat  launch-android.ps1  package-lock.json  package-test.json  package.json  react-native.config.js  restore-notifee.ps1  restore-original.ps1  setup-test.ps1  test-minimal.ps1
rn_chat/android/: build.gradle  gradle.properties
rn_chat/android/app/src/main/cpp/: CMakeLists.txt
rn_chat/ios/: GoogleService-Info.plist  Podfile
server/: .babelrc  .env  .mocharc.json  Dockerfile  express.js  index.js  package-lock.json  package.json
web/: .env  Dockerfile  eslint.config.js  global.ts  main.tsx  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
(+225 files in other folders)
